# python-static-analyzer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  REAL_WORLD_SCAN.md  conftest.py  explore_ast.py  pyproject.toml
.github/workflows/: ci.yml
benchmark/: score.py
benchmark/cases/: command_injection.py  known_limitations.py  sql_injection.py
samples/: vuln_command_injection.py  vuln_sql_injection.py
src/hello_cli/: __init__.py  cli.py
src/pytaint/: __init__.py  __main__.py  cli.py  detector.py  parser.py  reporting.py  scanner.py  signatures.py  taint.py
tests/: test_benchmark.py  test_cli.py  test_detector.py  test_greet.py  test_parser.py  test_scanner.py  test_taint.py
