[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytaint"
version = "0.1.0"
description = "A taint-based static analyzer that finds SQL injection and command injection in Python source code."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Carl Masters" }]
keywords = ["security", "static-analysis", "taint-analysis", "sql-injection", "command-injection", "ast"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# This line is the magic that turns `pytaint` into a real terminal command
# after install: it maps the command name -> function to call.
[project.scripts]
pytaint = "pytaint.cli:main"

# Extra dependencies only needed for development (tests, coverage).
# Installed with:  pip install -e ".[dev]"
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

# Tell setuptools our code lives under src/ (the "src layout").
[tool.setuptools.packages.find]
where = ["src"]

# pytest settings. `addopts` are flags applied every time you run `pytest`,
# so you get a coverage report automatically. `--cov-report=term-missing`
# lists the exact line numbers that no test touched.
[tool.pytest.ini_options]
addopts = "--cov=pytaint --cov-report=term-missing"
testpaths = ["tests"]

# Coverage settings: measure the pytaint package specifically.
[tool.coverage.run]
source = ["pytaint"]
